python-compiler/tests/snapshots/lists__list_indexing.snap
---
source: tests/lists.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string.4 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.5 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %malloc_list = tail call dereferenceable_or_null(24) ptr @malloc(i64 24)
  store i64 9221120237041090570, ptr %malloc_list, align 4
  %elem_ptr_1 = getelementptr inbounds i64, ptr %malloc_list, i64 1
  store i64 9221120237041090580, ptr %elem_ptr_1, align 4
  %elem_ptr_2 = getelementptr inbounds i64, ptr %malloc_list, i64 2
  store i64 9221120237041090590, ptr %elem_ptr_2, align 4
  %ptr_to_int = ptrtoint ptr %malloc_list to i64
  %list_ptr_payload = and i64 %ptr_to_int, 281474976710655
  %payload_to_list_ptr = inttoptr i64 %list_ptr_payload to ptr
  %elem = load i64, ptr %payload_to_list_ptr, align 4
  %check_qnan = and i64 %elem, 9221120237041090560
  %is_float.not = icmp eq i64 %check_qnan, 9221120237041090560
  %tag_bits = lshr i64 %elem, 48
  %tag = and i64 %tag_bits, 7
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %0 = trunc i64 %tag_bits to i3
  %1 = select i1 %is_bool, i3 2, i3 %0
  %2 = select i1 %is_string, i3 3, i3 %1
  %3 = select i1 %is_list, i3 -4, i3 %2
  %i64_to_f64 = bitcast i64 %elem to double
  %extract_payload = and i64 %elem, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not, double %payload_to_f64, double %i64_to_f64
  %trunc = select i1 %is_float.not, i3 %3, i3 1
  switch i3 %trunc, label %print_float [
    i3 3, label %print_string
    i3 0, label %print_int
  ]

print_int:                                        ; preds = %entry
  %to_int = fptosi double %final_payload to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.4, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %entry
  %printf_float = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.5, double %final_payload)
  br label %print_end

print_string:                                     ; preds = %entry
  %payload_to_ptr = inttoptr i64 %extract_payload to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  %elem_ptr8 = getelementptr inbounds i64, ptr %payload_to_list_ptr, i64 1
  %elem9 = load i64, ptr %elem_ptr8, align 4
  %check_qnan10 = and i64 %elem9, 9221120237041090560
  %is_float11.not = icmp eq i64 %check_qnan10, 9221120237041090560
  %tag_bits12 = lshr i64 %elem9, 48
  %tag13 = and i64 %tag_bits12, 7
  %is_bool14 = icmp eq i64 %tag13, 1
  %is_string15 = icmp eq i64 %tag13, 2
  %is_list16 = icmp eq i64 %tag13, 3
  %4 = trunc i64 %tag_bits12 to i3
  %5 = select i1 %is_bool14, i3 2, i3 %4
  %6 = select i1 %is_string15, i3 3, i3 %5
  %7 = select i1 %is_list16, i3 -4, i3 %6
  %i64_to_f6423 = bitcast i64 %elem9 to double
  %extract_payload24 = and i64 %elem9, 281474976710655
  %is_negative26.not = icmp ult i64 %extract_payload24, 140737488355328
  %masksel85 = select i1 %is_negative26.not, i64 0, i64 -281474976710656
  %signed_payload28 = or disjoint i64 %masksel85, %extract_payload24
  %payload_to_f6429 = sitofp i64 %signed_payload28 to double
  %final_payload30 = select i1 %is_float11.not, double %payload_to_f6429, double %i64_to_f6423
  %trunc86 = select i1 %is_float11.not, i3 %7, i3 1
  switch i3 %trunc86, label %print_float35 [
    i3 3, label %print_string36
    i3 0, label %print_int34
  ]

print_int34:                                      ; preds = %print_end
  %to_int38 = fptosi double %final_payload30 to i64
  %printf_int39 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.4, i64 %to_int38)
  br label %print_end37

print_float35:                                    ; preds = %print_end
  %printf_float40 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.5, double %final_payload30)
  br label %print_end37

print_string36:                                   ; preds = %print_end
  %payload_to_ptr42 = inttoptr i64 %extract_payload24 to ptr
  %puts87 = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr42)
  br label %print_end37

print_end37:                                      ; preds = %print_string36, %print_float35, %print_int34
  %elem_ptr47 = getelementptr inbounds i64, ptr %payload_to_list_ptr, i64 2
  %elem48 = load i64, ptr %elem_ptr47, align 4
  %check_qnan49 = and i64 %elem48, 9221120237041090560
  %is_float50.not = icmp eq i64 %check_qnan49, 9221120237041090560
  %tag_bits51 = lshr i64 %elem48, 48
  %tag52 = and i64 %tag_bits51, 7
  %is_bool53 = icmp eq i64 %tag52, 1
  %is_string54 = icmp eq i64 %tag52, 2
  %is_list55 = icmp eq i64 %tag52, 3
  %8 = trunc i64 %tag_bits51 to i3
  %9 = select i1 %is_bool53, i3 2, i3 %8
  %10 = select i1 %is_string54, i3 3, i3 %9
  %11 = select i1 %is_list55, i3 -4, i3 %10
  %i64_to_f6462 = bitcast i64 %elem48 to double
  %extract_payload63 = and i64 %elem48, 281474976710655
  %is_negative65.not = icmp ult i64 %extract_payload63, 140737488355328
  %masksel88 = select i1 %is_negative65.not, i64 0, i64 -281474976710656
  %signed_payload67 = or disjoint i64 %masksel88, %extract_payload63
  %payload_to_f6468 = sitofp i64 %signed_payload67 to double
  %final_payload69 = select i1 %is_float50.not, double %payload_to_f6468, double %i64_to_f6462
  %trunc89 = select i1 %is_float50.not, i3 %11, i3 1
  switch i3 %trunc89, label %print_float74 [
    i3 3, label %print_string75
    i3 0, label %print_int73
  ]

print_int73:                                      ; preds = %print_end37
  %to_int77 = fptosi double %final_payload69 to i64
  %printf_int78 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.4, i64 %to_int77)
  br label %print_end76

print_float74:                                    ; preds = %print_end37
  %printf_float79 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.5, double %final_payload69)
  br label %print_end76

print_string75:                                   ; preds = %print_end37
  %payload_to_ptr81 = inttoptr i64 %extract_payload63 to ptr
  %puts90 = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr81)
  br label %print_end76

print_end76:                                      ; preds = %print_string75, %print_float74, %print_int73
  ret i32 0
}

; Function Attrs: mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite)
declare noalias noundef ptr @malloc(i64 noundef) local_unnamed_addr #1

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
attributes #1 = { mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite) "alloc-family"="malloc" }
