python-compiler/tests/snapshots/lists__list_mixed_types.snap
---
source: tests/lists.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %malloc_list = tail call dereferenceable_or_null(32) ptr @malloc(i64 32)
  store i64 3, ptr %malloc_list, align 4
  %elem_ptr_0 = getelementptr inbounds i64, ptr %malloc_list, i64 1
  store i64 9221120237041090561, ptr %elem_ptr_0, align 4
  %elem_ptr_1 = getelementptr inbounds i64, ptr %malloc_list, i64 2
  store i64 4612811918334230528, ptr %elem_ptr_1, align 4
  %elem_ptr_2 = getelementptr inbounds i64, ptr %malloc_list, i64 3
  store i64 9221120237041090563, ptr %elem_ptr_2, align 4
  %ptr_to_int = ptrtoint ptr %malloc_list to i64
  %list_ptr_payload = and i64 %ptr_to_int, 281474976710655
  %is_negative.not = icmp ult i64 %list_ptr_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %list_ptr_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %printf_float = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string, double %payload_to_f64)
  ret i32 0
}

; Function Attrs: mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite)
declare noalias noundef ptr @malloc(i64 noundef) local_unnamed_addr #1

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
attributes #1 = { mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite) "alloc-family"="malloc" }
